--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/4bffe4bcc6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./sass/dist/main.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script type="text/javascript" src="js/app.js" defer></script>
 
 </head>
