validate files with W3C validator

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/4bffe4bcc6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
-    <script type="text/javascript" src="js/app.js" defer></script>
+    <script src="js/app.js" defer></script>
 
 </head>
-<header>
-    <div id="logo">
-        <img id="img_logo" src="./images/logo.svg" alt="logo poch'lib">
-    </div>
-</header>
+
 
 <body>
+    <header>
+        <div id="logo">
+            <img id="img_logo" src="./images/logo.svg" alt="logo poch'lib">
+        </div>
+    </header>
     <div id="myBooks">
         <h1 class="title">Poch'Lib</h1>
         <h2 class="h2">Nouveau Livre</h2>
